# trade_aggregation-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  mprocs.yaml  shell.nix
.buildkite/: pipeline.yaml
.github/workflows/: ci.yml  main.yml
.spellcheck/: lingua.dic  spellcheck.toml
benches/: candle_aggregation.rs  modular_aggregation.rs
data/: Bitstamp_BTCEUR_1M.csv
examples/: aggregate_all_ohlc.rs  simple_time.rs  simple_volume.rs  streaming_aggregate_ohlc.rs  streaming_time.rs  streaming_volume.rs  streaming_volume_modular.rs  user_trade_type.rs
src/: agg_time.rs  agg_time_streaming.rs  agg_volume.rs  agg_volume_streaming.rs  agg_volume_streaming_modular.rs  aggregator.rs  common.rs  constants.rs  database.rs  errors.rs  lib.rs  main.rs  modular_candle_trait.rs  modular_volume_aggregator.rs  plot.rs  time_aggregator.rs  types.rs  utils.rs  volume_aggregator.rs  welford_online.rs
src/aggregation_rules/: aggregation_rule_trait.rs  aligned_time_rule.rs  mod.rs  relative_price_rule.rs  tick_rule.rs  time_rule.rs  volume_rule.rs
src/candle_components/: arithmetic_mean_price.rs  average_price.rs  candle_component_trait.rs  candle_datetime.rs  close.rs  close_timestamp.rs  date.rs  directional_trade_ratio.rs  directional_volume_ratio.rs  entropy.rs  high.rs  low.rs  median_price.rs  mod.rs  num_trades.rs  open.rs  open_datetime.rs  open_timestamp.rs  std_dev_prices.rs  std_dev_sizes.rs  time_velocity.rs  timestamp_close.rs  trades.rs  volume.rs  volume_buys.rs  volume_sells.rs  vpin.rs  weighted_price.rs
src/modules/: average_price.rs  avg_spread.rs  close.rs  directional_trade_entropy.rs  directional_trade_ratio.rs  directional_volume_entropy.rs  directional_volume_ratio.rs  high.rs  last_spread.rs  low.rs  mod.rs  num_trades.rs  open.rs  std_dev_prices.rs  std_dev_sizes.rs  time_velocity.rs  trade_direction_entropy.rs  trade_direction_ratio.rs  volume.rs  volume_direction_entropy.rs  volume_direction_ratio.rs  weighted_price.rs
trade_aggregation_derive/: Cargo.toml  README.md
trade_aggregation_derive/src/: lib.rs
