[package]
name = "trade_aggregation"
version = "9.0.0"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Aggregate raw trades into candles using different methods"
repository = "https://github.com/MathisWellmann/trade_aggregation-rs"
readme = "README.md"
keywords = ["trading", "candles"]
categories = ["algorithms"]
exclude = ["/img", "/.idea"]

[dependencies]
csv = "^1"
thiserror = "^1"

# trade_aggregation_derive = "0.3.2"
trade_aggregation_derive = {path = "./trade_aggregation_derive"}

# Optionals
serde = { version = "^1", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
round = "^0.1"
criterion = "^0.3"
plotters = "^0.3"

[[bench]]
name = "candle_aggregation"
harness = false

[features]
serde = ["dep:serde"]
chrono = ["dep:chrono"]
