[package]
name = "trade_aggregation"
version = "13.0.1"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Aggregate trades into user defined candles using information driven rules"
repository = "https://github.com/MathisWellmann/trade_aggregation-rs"
readme = "README.md"
keywords = ["trading", "candles"]
categories = ["algorithms"]
exclude = ["/img", "/.idea"]

[workspace.lints.rust]
unused_imports = "deny"
missing_docs = "deny"
dead_code = "deny"

[workspace.lints.clippy]
all = "deny"

[dependencies]
csv = "1"
thiserror = "1"

trade_aggregation_derive = { path = "./trade_aggregation_derive", version = "0.4.1" }

# Optionals
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
round = "0.1"
criterion = "0.5"
plotters = "0.3"

[[bench]]
name = "candle_aggregation"
harness = false

[features]
serde = ["dep:serde"]
chrono = ["dep:chrono"]

[workspace.metadata.spellcheck]
config = "./.spellcheck/spellcheck.toml"
