[package]
name = "trade_aggregation_derive"
version = "0.2.1"
edition = "2021"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
license-file = "LICENSE"
description = "The macros for trade_aggregation crate"
repository = "https://github.com/MathisWellmann/trade_aggregation-rs"
readme = "README.md"
keywords = [
    "trading",
    "candles",
    "macro",
]
categories = [
    "algorithms"
]
ignore = [
    "target"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "^1"
quote = "^1"
