[package]
name = "trade_aggregation_derive"
version = "0.4.1"
edition = "2021"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
license-file = "LICENSE"
description = "The macros for trade_aggregation crate"
repository = "https://github.com/MathisWellmann/trade_aggregation-rs"
readme = "README.md"
keywords = ["trading", "candles", "macro"]
categories = ["algorithms"]
ignore = ["target"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["extra-traits"] }
quote = "1"
